@@ -1,4 +1,9 @@
 {{$NEXT}}
+          Improvements;
+          - Add raw_data attribute that has the raw XML
+          - Validate XML before using just in case.
+          - improve Synopsis
+          
 
 0.01      2010-12-29 09:04:55 America/Denver
           - Initial Release
